Overflow fix

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -37,3 +37,6 @@ footer {
     }
 }
 
+html {
+    overflow-x: hidden;
+}
